|#5|santhosh/ragini| added rendering questions in homepage
added a handler /questions
added a sendRequest in fetch.js
added getQuestions and render questions in home.js
modified home.html and its styles

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="../css/home.css" />
+    <script src="../js/home.js"></script>
+    <script src="../js/fetch.js"></script>
     <title>Inquire</title>
   </head>
   <body>
@@ -16,12 +18,12 @@
 
       <div class="container">
         <div id="menubar">
-          <div class="menu-item">Home</div>
+          <div class="menu-item highlight">Home</div>
           <div class="menu-item">Your Questions</div>
           <div class="menu-item">Your Answers</div>
-          <div class="menu-item">Your tags</div>
+          <div class="menu-item">Your Tags</div>
         </div>
-        <div id="questionslist"></div>
+        <div id="questions"></div>
       </div>
     </div>
   </body>
