|#12|Satheesh/Rivu| modified handle login, newProfile.html dataStore
in handleLogin if the user already registered then redirected to home
page
moved newProgile.html to private
added method findUser in dataStore to check a user is there or not

--- a/private/newProfile.html
+++ b/private/newProfile.html
@@ -5,18 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inquire</title>
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/newProfile.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/newProfile.css">
   </head>
 
   <body>
     <div id="root">
       <div id="titlebar">
         <div class="logo">Inquire</div>
-        <div>
-          <button>Login</button>
-          <button>Signup</button>
-        </div>
       </div>
 
       <div id="container">
