|#5|santhosh/ragini| serving home page with user menus and avatar for authorized user
modified homepage and its styles
added function renderHomepage in home.js
modified getQuestions handler

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -11,17 +11,18 @@
       <div id="titlebar">
         <div class="logo">Inquire</div>
         <div>
-          <button>Login</button>
-          <button>Signup</button>
+          <button class="unauthBtn">Login</button>
+          <button class="unauthBtn">Signup</button>
+          <img class="avatar hide"></img>
         </div>
       </div>
 
       <div class="container">
         <div id="menubar">
           <div class="menu-item highlight">Home</div>
-          <div class="menu-item">Your Questions</div>
-          <div class="menu-item">Your Answers</div>
-          <div class="menu-item">Your Tags</div>
+          <div class="menu-item hide">Your Questions</div>
+          <div class="menu-item hide">Your Answers</div>
+          <div class="menu-item hide">Your Tags</div>
         </div>
         <div id="questions"></div>
       </div>
