|#5|santhosh/ragini| added links to the login and signup buttons

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -11,8 +11,8 @@
       <div id="titlebar">
         <div class="logo">Inquire</div>
         <div>
-          <button class="unauthBtn">Login</button>
-          <button class="unauthBtn">Signup</button>
+          <button class="unauthBtn"><a href="/login">Login</a></button>
+          <button class="unauthBtn"><a href="/login">Signup</a></button>
           <img class="avatar hide"></img>
         </div>
       </div>
