|#5|santhosh/ragini| added ask question button in home page

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -24,7 +24,12 @@
           <div class="menu-item hide">Your Answers</div>
           <div class="menu-item hide">Your Tags</div>
         </div>
-        <div id="questions"></div>
+        <div id="questions">
+          <div class="question content-space"> 
+            <span class="logo padding"> All Questions</span>  
+            <button class="unauthBtn hide" id="askbtn"> Ask Question </button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
