|#9|santhosh/ragini| rendering question details in question page

--- a/private/questionPage.html
+++ b/private/questionPage.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/questionPage.css" />
     <script src="../js/questionPage.js"></script>
     <script src="../js/fetch.js"></script>
     <title>Inquire</title>
@@ -23,8 +24,7 @@
           <div class="menu-item hide">Your Answers</div>
           <div class="menu-item hide">Your Tags</div>
         </div>
-        <div id="questions">
-        </div>
+        <div class="question-details"></div>
       </div>
     </div>
   </body>
