--- a/public/html/home.html
+++ b/public/html/home.html
@@ -23,7 +23,7 @@
           <div class="menu-item hide">Your Answers</div>
           <div class="menu-item hide">Your Tags</div>
         </div>
-        <div id="questions">
+        <div id="questions" class="question-details">
           <div class="question content-space"> 
             <span class="logo padding"> All Questions</span>  
             <button class="unauthBtn hide" id="askbtn"> Ask Question </button>
