|#13|Rivu/Satheesh|Modified styles of  questionPage.html

--- a/private/questionPage.html
+++ b/private/questionPage.html
@@ -19,7 +19,7 @@
 
       <div class="container">
         <div id="menubar">
-          <div class="menu-item highlight">Home</div>
+          <div class="menu-item">Home</div>
           <div class="menu-item hide">Your Questions</div>
           <div class="menu-item hide">Your Answers</div>
           <div class="menu-item hide">Your Tags</div>
