|#13|Rivu/Satheesh| minor changes in css of pages and html

--- a/private/profilePage.html
+++ b/private/profilePage.html
@@ -19,7 +19,7 @@
           <div class="menu-item">Your Answers</div>
           <div class="menu-item">Your Tags</div>
         </div>
-        <div id="sideContainer">
+        <div id="sideContainer" class="question-details">
         </div>
       </div>
     </div>
