--- a/private/newProfile.html
+++ b/private/newProfile.html
@@ -16,19 +16,19 @@
       </div>
       <div id="container">
         <form action="/newProfile" method="POST">
-          <label>NAME : </label>
+          <label>Name : </label>
           <input type="text" name="name" required>
-          <label>USERNAME : </label>
+          <label>Username : </label>
           <input type="text" name="username" required>
-          <label>EMAIL : </label>
+          <label>Email : </label>
           <input type="text" name="email">
-          <label>COMPANY : </label>
+          <label>Company : </label>
           <input type="text" name="company">
-          <label>BIO : </label>
+          <label>Bio : </label>
           <textarea name="bio" id="bio"rows="10"></textarea>
           <div id='formFooter'>
-            <button>SUBMIT</button>
-            <a href="/" id="cancelButton">CANCEL</a>
+            <a href="/" id="cancelButton">Cancel</a>
+            <button>Submit</button>
           </div>
         </form>
       </div>
