|#13|Rivu/Satheesh| minor changes in css of pages and html to make more interctive on clicks

--- a/private/questionPage.html
+++ b/private/questionPage.html
@@ -10,16 +10,16 @@
   <body onload="getQuestion()">
     <div id="root">
       <div id="titlebar">
-        <div class="logo">Inquire</div>
+        <div class="logo" onclick="(window.location.href='/')">Inquire</div>
         <div>
           <button class="unauthBtn"><a href="/login">Login</a></button>
-          <img class="avatar hide"></img>
+          <img class="avatar hide" ></img>
         </div>
       </div>
 
       <div class="container">
         <div id="menubar">
-          <div class="menu-item">Home</div>
+          <div class="menu-item" onclick="(window.location.href='/home')">Home</div>
           <div class="menu-item hide">Your Questions</div>
           <div class="menu-item hide">Your Answers</div>
           <div class="menu-item hide">Your Tags</div>
