--- a/public/html/home.html
+++ b/public/html/home.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root">
       <div id="titlebar">
-        <div class="logo">Inquire</div>
+        <div class="logo" onclick="(window.location.href='/')">Inquire</div>
         <div>
           <button class="unauthBtn"><a href="/login">Login</a></button>
           <img class="avatar hide"></img>
@@ -18,7 +18,7 @@
 
       <div class="container">
         <div id="menubar">
-          <div class="menu-item highlight">Home</div>
+          <div class="menu-item highlight" onclick="(window.location.href='/home')">Home</div>
           <div class="menu-item hide">Your Questions</div>
           <div class="menu-item hide">Your Answers</div>
           <div class="menu-item hide">Your Tags</div>
