--- a/private/profilePage.html
+++ b/private/profilePage.html
@@ -9,12 +9,12 @@
   <body>
     <div id="root">
       <div id="titlebar">
-        <div class="logo">Inquire</div>
+        <div class="logo" onclick="(window.location.href='/')">Inquire</div>
       </div>
 
       <div class="container">
         <div id="menubar">
-          <div class="menu-item">Home</div>
+          <div class="menu-item" onclick="(window.location.href='/home')">Home</div>
           <div class="menu-item">Your Questions</div>
           <div class="menu-item">Your Answers</div>
           <div class="menu-item">Your Tags</div>
