|#12|Rivu/Satheesh|Added login page for the confirmation of login
Modified styles of the .unauthBtn in home page

--- a/private/questionPage.html
+++ b/private/questionPage.html
@@ -12,7 +12,7 @@
       <div id="titlebar">
         <div class="logo" onclick="(window.location.href='/')">Inquire</div>
         <div>
-          <button class="unauthBtn"><a href="/login">Login</a></button>
+          <button class="unauthBtn"><a href="../html/login.html">Login</a></button>
           <img class="avatar hide" ></img>
         </div>
       </div>
