--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <link rel="stylesheet" href="../css/home.css" />
     <script src="../js/home.js"></script>
     <script src="../js/fetch.js"></script>
     <title>Inquire</title>
   </head>
+
   <body>
     <div id="root">
       <div id="titlebar">
         <div class="logo" onclick="(window.location.href='/')">Inquire</div>
         <div>
-          <button class="unauthBtn"><a href="/login">Login</a></button>
+          <button class="unauthBtn"><a href="../html/login.html">Login</a></button>
           <img class="avatar hide"></img>
         </div>
       </div>
@@ -24,12 +26,13 @@
           <div class="menu-item hide">Your Tags</div>
         </div>
         <div id="questions" class="question-details">
-          <div class="question content-space"> 
-            <span class="logo padding"> All Questions</span>  
+          <div class="question content-space">
+            <span class="logo padding"> All Questions</span>
             <button class="unauthBtn hide" id="askbtn"> Ask Question </button>
           </div>
         </div>
       </div>
     </div>
   </body>
+
 </html>
