--- a/private/newProfile.html
+++ b/private/newProfile.html
@@ -17,7 +17,7 @@
       <div id="container">
         <form action="/newProfile" method="POST">
           <label>Name : </label>
-          <input type="text" name="name" required>
+          <input type="text" name="name" required autofocus>
           <label>Username : </label>
           <input type="text" name="username" required>
           <label>Email : </label>
@@ -25,10 +25,10 @@
           <label>Company : </label>
           <input type="text" name="company">
           <label>Bio : </label>
-          <textarea name="bio" id="bio"rows="10"></textarea>
+          <textarea name="bio" id="bio" rows="10"></textarea>
           <div id='formFooter'>
             <button>Submit</button>
-            <a href="/" id="cancelButton">Cancel</a>
+            <a href="/cancel" id="cancelButton">Cancel</a>
           </div>
         </form>
       </div>
