|#9|santhosh/ragini| changed description in login page

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -13,7 +13,7 @@
       <div class="logo" onclick="(window.location.href='/')">Inquire</div>
     </div>
     <div id="container">
-      <h3>Inquire is a site for developers to query, learn and share their programming knowledge.
+      <h3>Inquire helps you to learn and share your programming knowledge as well as clear your doubts.
       </h3>
       <button onclick="(window.location.href='/login')">Login with Github</button>
       <br>
